--- a/src/main/resources/templates/skilllog/new.html
+++ b/src/main/resources/templates/skilllog/new.html
@@ -8,23 +8,61 @@
         <form th:action="@{/skilllog-web/new}" th:object="${skillLog}" method="post">
             <div class="mb-3">
                 <label for="description" class="form-label">説明:</label>
-                <input type="text" id="description" th:field="*{description}" class="form-control" required />
+                <input type="text" 
+					　　 id="description" 
+					   th:field="*{description}" 
+					   class="form-control" 
+					   th:classappend="${#fields.hasErrors('description')} ? 'is-invalid'"
+					   required />
+					   <div class="invalid-feedback"
+					        th:if="${#fields.hasErrors('description')}"
+					        th:errors="*{description}">
+						</div>
             </div>
 
             <div class="mb-3">
                 <label for="minutes" class="form-label">時間（分）:</label>
-                <input type="number" id="minutes" th:field="*{minutes}" class="form-control" required />
-            </div>
+                <input type="number"
+					   id="minutes" 
+					   th:field="*{minutes}" 
+					   class="form-control" 
+					   th:classappend="${#fields.hasErrors('minutes')} ? 'is-invalid'"
+					   required />
+					   <div class="invalid-feedback"
+					        th:if="${#fields.hasErrors('minutes')}"
+					        th:errors="*{minutes}">
+						</div>
+			</div>
 
             <div class="mb-3">
                 <label for="date" class="form-label">日付:</label>
-                <input type="date" id="date" th:field="*{date}" class="form-control" required />
+                <input type="date" 
+				       id="date" 
+					   th:field="*{date}" 
+					   class="form-control" 
+					   th:classappend="${#fields.hasErrors('date')} ? 'is-invalid'"
+					   required />
+					   <div class="invalid-feedback"
+					        th:if="${#fields.hasErrors('date')}"
+					        th:errors="*{date}">
+						</div>
             </div>
 
             <div class="mb-3">
                 <label for="categoryId" class="form-label">カテゴリ:</label>
-                <select id="categoryId" name="categoryId" class="form-select" required>
-                    <option th:each="cat : ${categories}" th:value="${cat.skillId}" th:text="${cat.name}"></option>
+                <select id="categoryId" 
+						name="categoryId" 
+						class="form-select" 
+						th:classappend="${#fields.hasErrors('category')} ? 'is-invalid'"
+						required>
+                    <option th:each="cat : ${categories}" 
+							th:value="${cat.skillId}" 
+							th:text="${cat.name}">
+					</option>
+					<div class="invalid-feedback"
+					     th:if="${#fields.hasErrors('category')}"
+					     th:errors="*{category}">
+					 </div>
                 </select>
             </div>
 
